added name to the html

--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <h2>This is local to the branch</h2>
 <h2>This is local to the branch</h2>
 <h2>This is local to the branch again</h2>
+<h2>This is local to the branch with h3 Sandip</h2>
